--- a/src/components/sheriff.scss
+++ b/src/components/sheriff.scss
@@ -1,6 +1,16 @@
 .sheriffDiv {
-    background-color: aliceblue;
+    // border: 1px solid red;
     position: absolute;
     bottom: 10px;
     transition: 0.5s linear;
+}
+
+.planeSvg {
+    width: 100%;
+    height: 100%;
+    // border: 1px solid green;
+    & g {
+        fill: green;
+    }
+    
 }
