--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,14 @@
 @import './_mixins.scss';
 @import './_board.scss';
 
+// :root {
+//   --boardWidthFromJs: 50; 
+// }
+
+html {
+  --targetWidthFromJs: 0; 
+}
+
 .mainWrap {
   height: 100vh;
   width: 100%;
@@ -16,68 +24,3 @@
 }
 
 
-// .playBtnDiv {
-//   @include alignContentCenterWithFlex();
-//   height: 100%;
-//   & :hover #path3676 {
-//     fill:  green;
-//   }
-//   & svg {
-//     width: 100px;
-//     height: 100px;
-//     border-radius: 50%;
-//     // border: 1px solid white;
-//     & #path3676 {
-//       fill: red;
-//       transition: 0.2s;
-//     }    
-//   }
-//   & :hover {
-//     cursor: pointer;
-//   }  
-// }
-
-
-
-
-
-/* ORIG */
-
-/* .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
