--- a/src/_board.scss
+++ b/src/_board.scss
@@ -1,8 +1,9 @@
 .board {
     border: 1px solid rgba(255, 0, 0, 0.4);
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: stretch;
     position: relative;
   }
     
