--- a/src/components/panel.scss
+++ b/src/components/panel.scss
@@ -4,6 +4,7 @@
     background-color: rgba(51, 160, 1, 0.8);
     border: 10px solid transparent;
     color: rgba(255, 255, 255, 0.7);
+    margin-bottom: 2vh;
     & p {
         font-size: 5vmin;
         padding: 2vmin;
