--- a/src/components/panel.scss
+++ b/src/components/panel.scss
@@ -6,17 +6,40 @@
     color: rgba(255, 255, 255, 0.7);
     margin-bottom: 4vh;
     & span {
-        font-size: 10vmin;
-        padding: 2vmin;
+        font-size: 8vmin;
+        padding: 4vmin 0;
     }
     & span:nth-of-type(2) {
         font-size: 8vmin;
+        padding: 4vmin 3vmin;
         position: absolute;
-        top: 2vh;
-        border-radius: 50%;
-        background-color: rgb(5, 238, 160);
-        right: 8vmin;
+        border-radius: 10px;
+        background-color: rgba(5, 238, 160, 0.5);
+        right: 5%;
         color: rgb(150, 36, 1);
         box-shadow: 5px 3px 5px rgba(0, 0, 0, 0.3);
     }
 }
+
+.sound {
+    position: absolute;
+    top: 2%;
+    left: 2%;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    // border: 1px solid red;
+
+    & svg {
+        width: 100%;
+        height: 100%;
+        & g {
+            fill: rgba(168, 168, 168, 0.5);
+        }
+    }
+}
+
+.on svg g {    
+        fill: rgb(4, 36, 0);
+}
+
