--- a/src/_board.scss
+++ b/src/_board.scss
@@ -6,4 +6,19 @@
     align-items: stretch;
     position: relative;
   }
+
+  .intro {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    & svg {
+      width: 70%;
+      & g {
+        fill: rgba(255, 0, 0, 0.5);
+      }
+    }
+  }
     
