--- a/src/_board.scss
+++ b/src/_board.scss
@@ -1,10 +1,11 @@
 .board {
-    border: 1px solid rgba(255, 0, 0, 0.4);
+    // border: 1px solid rgba(255, 0, 0, 0.4);
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: stretch;
     position: relative;
+    overflow: hidden;
   }
 
   .intro {
